--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -8,6 +8,20 @@
 @mixin neucha {
   font-family: "Neucha", sans-serif;
 }
+
+@mixin bg-image {
+  position: absolute;
+  z-index: -2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.1;
+  content: "";
+}
 // === / Mixin ===
 
 // === Variables ===
@@ -15,6 +29,7 @@ $white: #fff;
 $translucent-white: #d7ccc0;
 $light: #f5f4f0;
 $primary: #fe8a02;
+$prinmary-hover: #ea7600;
 $primary-dark: #42413c;
 $dark: #2a2626;
 $translucent-dark: #908d8b;
@@ -35,6 +50,9 @@ $padding-vertical: 100px;
 // === Common ===
 body {
   @include opensans;
+  font-size: $fs-primary;
+  line-height: $hl-primary;
+  color: $font-col;
 }
 
 .section-outer {
@@ -45,6 +63,40 @@ body {
   margin: 0 auto;
   padding-top: $padding-vertical;
   padding-bottom: $padding-vertical;
+  position: relative;
+}
+
+.article {
+  display: flex;
+  justify-content: space-between;
+
+  .left-part-article {
+    margin-right: 30px;
+  }
+
+  .left-part-article,
+  .right-part-article {
+    flex: 100%;
+    .inner-text {
+      margin: 0;
+      padding-top: 16px;
+    }
+  }
+}
+
+.btn {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  background-color: $primary;
+  color: $white;
+  font-weight: $fw-bold;
+  &.header-btn {
+    padding: 12px 24px;
+  }
+  &:hover {
+    background-color: $prinmary-hover;
+  }
 }
 
 h1,
@@ -54,10 +106,12 @@ h3 {
   padding: 0;
   line-height: 1.2em;
   font-weight: $fw-regular;
+  @include neucha;
 }
 
 h1 {
   font-size: 72px;
+  color: $primary;
 }
 
 h2 {
@@ -71,6 +125,32 @@ h3 {
 
 // === Header ===
 .section-header {
+  position: relative;
+
+  &::before {
+    @include bg-image;
+  }
+
+  .section-inner {
+    .header-head {
+      span {
+        color: $dark;
+      }
+    }
+    .header-img {
+      position: absolute;
+      z-index: -1;
+      height: 525px;
+      top: 55px;
+      right: -270px;
+    }
+    .header-article {
+      margin-top: 185px;
+      .btn-wrapper {
+        margin-top: 40px;
+      }
+    }
+  }
 }
 // === / Header ===
 
