--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans&display=swap");
 body {
   font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  line-height: 1.6em;
+  color: #2a2626;
 }
 
 .section-inner {
@@ -8,6 +11,39 @@ body {
   margin: 0 auto;
   padding-top: 100px;
   padding-bottom: 100px;
+  position: relative;
+}
+
+.article {
+  display: flex;
+  justify-content: space-between;
+}
+.article .left-part-article {
+  margin-right: 30px;
+}
+.article .left-part-article,
+.article .right-part-article {
+  flex: 100%;
+}
+.article .left-part-article .inner-text,
+.article .right-part-article .inner-text {
+  margin: 0;
+  padding-top: 16px;
+}
+
+.btn {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  background-color: #fe8a02;
+  color: #fff;
+  font-weight: 700;
+}
+.btn.header-btn {
+  padding: 12px 24px;
+}
+.btn:hover {
+  background-color: #ea7600;
 }
 
 h1,
@@ -17,10 +53,12 @@ h3 {
   padding: 0;
   line-height: 1.2em;
   font-weight: 400;
+  font-family: "Neucha", sans-serif;
 }
 
 h1 {
   font-size: 72px;
+  color: #fe8a02;
 }
 
 h2 {
@@ -29,6 +67,39 @@ h2 {
 
 h3 {
   font-size: 34px;
+}
+
+.section-header {
+  position: relative;
+}
+.section-header::before {
+  position: absolute;
+  z-index: -2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.1;
+  content: "";
+}
+.section-header .section-inner .header-head span {
+  color: #2a2626;
+}
+.section-header .section-inner .header-img {
+  position: absolute;
+  z-index: -1;
+  height: 525px;
+  top: 55px;
+  right: -270px;
+}
+.section-header .section-inner .header-article {
+  margin-top: 185px;
+}
+.section-header .section-inner .header-article .btn-wrapper {
+  margin-top: 40px;
 }
 
 /*# sourceMappingURL=style.css.map */
